feat: add ReActAgentConfig

--- a/_typos.toml
+++ b/_typos.toml
@@ -1,4 +1,9 @@
 [default.extend-words]
 
 [files]
-extend-exclude = ["CHANGELOG.md", "notebooks/*"]
+extend-exclude = [
+    "CHANGELOG.md",
+    "notebooks/*",
+    "prompting/*",
+    "src/template/*",
+]
