--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 async-openai = "0.23.4"
+async-stream = "0.3.5"
 derive_builder = "0.20.0"
+futures = "0.3.30"
 url = "2.5.2"
+tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
+serde_json = "1.0.121"
+dotenvy = "0.15.7"
