--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ url = "2.5.2"
 tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
 serde_json = "1.0.121"
 dotenvy = "0.15.7"
+reqwest = { version = "0.12.5", features = ["json"] }
+serde = { version = "1.0.204", features = ["derive"] }
