--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ serde_json = "1.0.121"
 dotenvy = "0.15.7"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
+enum_dispatch = "0.3.13"
+strum = { version = "0.26.3", features = ["derive"] }
