--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 enum_dispatch = "0.3.13"
 strum = { version = "0.26.3", features = ["derive"] }
+tera = "1.20.0"
